# flutter_edf

./: README.md  pubspec.yaml
.dart_tool/: package_config.json  package_graph.json
.dart_tool/extension_discovery/: vs_code.json
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt
android/src/main/kotlin/com/plugin/flutter_edf/: CustomPlugin.kts  FlutterEdfPlugin.kt
android/src/test/kotlin/com/flutteredf/plugin/flutter_edf/: FlutterEdfPluginTest.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/flutteredf/plugin/flutter_edf_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/test/: widget_test.dart
ios/: flutter_edf.podspec
ios/Classes/: FlutterEdfPlugin.swift
lib/: edf_helper.dart  edf_lib.dart  vital_data_records.dart
